# ansible-role-cloud-launcher

./: .gitreview  .zuul.yaml  README.md  README.rst  requirements.txt  resources.yml.sample  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py
meta/: main.yml
tasks/: create_clouds_resources.yml  create_domain.yml  create_flavor.yml  create_image.yml  create_keypair.yml  create_network.yml  create_per_cloud_clustered_servers.yml  create_per_cloud_profiles_resources.yml  create_per_cloud_resources.yml  create_per_cloud_servers.yml  create_per_profile_servers.yml  create_project.yml  create_project_access.yml  create_quota.yml  create_role.yml  create_router.yml  create_security_group.yml  create_security_group_rule.yml  create_server.yml  create_servers.yml  create_subnet.yml  create_user.yml  create_user_role.yml  create_volume.yml  generate_keypair.yml  main.yml  recreate_keypair.yml
tests/: ansible.cfg  inventory  resources.yml  test.yaml
tests/hooks/: post_test_hook.sh
