[metadata]
name = ansible-role-cloud-launcher
summary = Ansible role launch multiple OpenStack clouds resources
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/ansible-role-cloud-launcher
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[wheel]
universal = 1
